# Cifar10_SimpleFlaskApp

./: .gitignore  Clearml_Setup.md  LICENCE  README.md  pyproject.toml  server.py
cifar10_simple_flask_app/: __init__.py  views.py
cifar10_simple_flask_app/static/css/: style.css
cifar10_simple_flask_app/templates/: index.html
weights/: model.h5
weights/archive/: model-20240219.h5  model-20240228.h5
